OMS-172. рефакторинг